--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.tsx",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/express": "^4.17.11",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
