--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
-    "knex": "^0.21.19",
     "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   },
