--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "index.tsx",
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link-http": "^1.5.17",
+    "apollo-server-express": "^2.21.1",
+    "apollo-upload-client": "^14.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
@@ -33,6 +34,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/cors": "^2.8.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -49,10 +51,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
-    "nodemon": "^2.0.7",
+    "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
