--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "@types/cors": "^2.8.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "@types/sqlite3": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-loader": "^8.0.2",
@@ -53,6 +51,7 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
+    "waait": "^1.0.5",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^3.3.12"
