--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login_form",
+  "name": "test_qraphql",
   "version": "1.0.0",
   "description": "",
   "main": "index.tsx",
@@ -12,6 +12,7 @@
     "apollo-upload-client": "^14.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "nodemon": "^2.0.7",
@@ -37,6 +38,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "apollo-server-testing": "^2.21.1",
     "babel-loader": "^8.0.2",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -54,7 +56,8 @@
     "waait": "^1.0.5",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^2.5.2"
   },
   "jest": {
     "roots": [
@@ -77,8 +80,11 @@
     ]
   },
   "scripts": {
-    "build": "webpack --mode production --progress --hide-modules",
+    "build": "webpack --mode production --progress",
     "start": "node -r ts-node/register backend/index.ts",
+    "buildU": "webpack --mode production --progress",
+    "startU": "webpack-dev-server --open --hot",
+    "dev": "webpack --mode development && node -r ts-node/register backend/index.ts",
     "test": "jest",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "npm run lint -- --fix"
