--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "waait": "^1.0.5",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^3.3.12",
@@ -61,10 +60,12 @@
   },
   "jest": {
     "roots": [
-      "<rootDir>/src"
+      "<rootDir>/src/",
+      "<rootDir>/backend/"
     ],
     "modulePaths": [
-      "<rootDir>/src"
+      "<rootDir>/src/",
+      "<rootDir>/backend/"
     ],
     "moduleDirectories": [
       "node_modules"
