--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "apollo-upload-client": "^14.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "nodemon": "^2.0.7",
@@ -97,7 +96,7 @@
   "author": "marry705",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/marry705/login_form/issues"
+    "url": "https://github.com/marry705/test_qraphql/issues"
   },
-  "homepage": "https://github.com/marry705/login_form#readme"
+  "homepage": "https://github.com/marry705/test_qraphql#readme"
 }
