--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,19 +2,13 @@
   "name": "test_qraphql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.tsx",
+  "main": "src/index.tsx",
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@types/express": "^4.17.11",
-    "apollo-server-express": "^2.21.1",
     "apollo-upload-client": "^14.1.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "graphql": "^15.5.0",
-    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
@@ -37,7 +31,6 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "apollo-server-testing": "^2.21.1",
     "babel-loader": "^8.0.2",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -46,25 +39,21 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2",
     "webpack-node-externals": "^2.5.2"
   },
   "jest": {
     "roots": [
-      "<rootDir>/src/",
-      "<rootDir>/backend/"
+      "<rootDir>/src/"
     ],
     "modulePaths": [
-      "<rootDir>/src/",
-      "<rootDir>/backend/"
+      "<rootDir>/src/"
     ],
     "moduleDirectories": [
       "node_modules"
@@ -80,14 +69,10 @@
     ]
   },
   "scripts": {
-    "build": "webpack --mode production --progress",
-    "start": "node -r ts-node/register backend/index.ts",
-    "buildU": "webpack --mode production --progress",
-    "startU": "webpack-dev-server --open --hot",
-    "dev": "webpack --mode development && node -r ts-node/register backend/index.ts",
     "test": "jest",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "npm run lint -- --fix"
+    "build": "webpack --mode development --progress --hide-modules",
+    "start": "webpack-dev-server --open --hot",
+    "lint": "eslint src --ext .ts,.tsx"
   },
   "repository": {
     "type": "git",
