--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "apollo-server-testing": "^2.21.1",
+    "concurrently": "^5.3.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -53,9 +54,8 @@
   "scripts": {
     "start": "node -r ts-node/register ./src/index.ts",
     "start:watch": "nodemon",
-    "start:client": "npm run start --prefix ../client",
+    "start:client": "npm run start --prefix ../frontend",
     "dev": "concurrently \"npm run start:watch\" \"npm run start:client\"",
-    "build": "tsc",
     "test": "jest",
     "lint": "eslint src --ext .ts"
   },
