--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,17 @@
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "apollo-server-express": "^2.21.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "graphql-upload": "^11.0.0",
+    "lowdb": "^1.0.0",
     "nodemon": "^2.0.7",
-    "react": "^17.0.1"
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "react": "^17.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
@@ -55,7 +57,7 @@
     "start": "node -r ts-node/register ./src/index.ts",
     "start:watch": "nodemon",
     "start:client": "npm run start --prefix ../frontend",
-    "dev": "concurrently \"npm run start:watch\" \"npm run start:client\"",
+    "dev": "concurrently \"npm run start\" \"npm run start:client\"",
     "test": "jest",
     "lint": "eslint src --ext .ts"
   },
