--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
