--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,6 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "apollo-upload-client": "^14.1.3",
-    "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -33,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-loader": "^8.0.2",
+    "dotenv-webpack": "^7.0.2",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^2.3.0",
